memory-infra: delay first periodic dump by 200 ms

This is a temporary hack until a more correct solution is implemented.
This is so that the upcoming stable does not have the bug specified.

Bug: 770151
Change-Id: I7e4f5c7ad5c41620e3ed667af059498aaa9ad041