base/trace_event/memory_dump_scheduler.cc
@@ -74,9 +74,12 @@ void MemoryDumpScheduler::StartInternal(MemoryDumpScheduler::Config config) {
   heavy_dump_rate_ = heavy_dump_period_ms / min_period_ms;
 
   // Trigger the first dump immediately.
-  SequencedTaskRunnerHandle::Get()->PostTask(
+  // TODO(lalitm): this is a tempoarary hack to delay the first scheduled dump
+  // so that tracing messages can propogate. See crbug.com/770151.
+  SequencedTaskRunnerHandle::Get()->PostDelayedTask(
       FROM_HERE,
-      BindOnce(&MemoryDumpScheduler::Tick, Unretained(this), ++generation_));
+      BindOnce(&MemoryDumpScheduler::Tick, Unretained(this), ++generation_),
+      TimeDelta::FromMilliseconds(200));
 }
 
 void MemoryDumpScheduler::StopInternal() {
